[package]
categories = ["game-development", "game-engines", "games", "graphics", "multimedia"]
description = "Wolf is a set of modules for realtime rendering, realtime streaming and game developing"
edition = "2021"
keywords = ["gamedev", "system", "gamedev", "render"]
license = "Apache-2.0"
name = "wolfengine"
readme = "README.md"
repository = "https://github.com/WolfEngine/WolfEngine/"
version = "3.0.0"

[lib]
crate-type = ["rlib"]
name = "wolf"
path = "src/lib.rs"

# before adding any dependency please check it out from
# https://android.googlesource.com/platform/external/rust/crates/
[dependencies]
anyhow = {default-features = false, features = ["std"], version = "1.0.56"}
async-raft = {default-features = false, version = "0.6.1"}
async-trait = {default-features = false, version = "0.1.52"}
futures = {default-features = false, version = "0.3.21"}
hyper = {default-features = false, version = "0.14.18"}
lazy_static = {default-features = false, version = "1.4.0"}
may = {default-features = false, version = "0.3.20"}
memstore = {default-features = false, version = "0.2.0"}
mimalloc = {default-features = false, features = ["secure"], version = "0.1.28"}
parking_lot = {default-features = false, features = ["deadlock_detection"], version = "0.12.0"}
prost = {default-features = false, version = "0.9.0"}
rustls-pemfile = {default-features = false, version = "0.3.0"}
scylla = {default-features = false, features = ["ssl"], version = "0.4.3"}
serde_json = {default-features = false, features = ["std"], version = "1.0.79"}
sysinfo = {default-features = false, features = ["multithread"], version = "0.23.5"}
tokio = {default-features = false, features = ["full"], version = "1.17.0"}
tokio-rustls = {default-features = false, features = ["logging", "tls12"], version = "0.23.3"}
tokio-tungstenite = {default-features = false, features = ["connect", "rustls"], version = "0.17.1"}
tonic = {default-features = false, features = ["codegen", "prost", "tls", "compression"], version = "0.6.2"}
tracing = {default-features = false, features = ["std", "attributes"], version = "0.1.32"}
uuid = {default-features = false, features = ["v5"], version = "0.8.2"}
webpki-roots = {default-features = false, version = "0.22.2"}

[build-dependencies]
#wolf_build = { version = "3.0.0", path = "../wolf_build" }

[dev-dependencies]
lazy_static = {default-features = false, version = "1.4.0"}
serde = {default-features = false, version = "1.0.136"}

[features]
default = []
system = []
render = []
stream = []
lua = []
